--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,8 +1,37 @@
 .App {
-  height: 100vh;
+  width: 700px;
+  margin: 0 auto;
+  padding: 20px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  font-size: 40px;
-  color: #010101;
+  font-size: 20px;
+  color: #004c6d;
+  background: #f1f5f8;
+  background-image: radial-gradient(#bfc0c1 7.2%, transparent 0);
+  background-size: 25px 25px;
+  border-radius: 20px;
+  box-shadow: 4px 3px 7px 2px #00000040;
+}
+
+.TodoForm{
+    margin-bottom: 15px;
+}
+
+.TodoList{
+    width: 100%;
+    padding: 10px 30px;
+}
+.TodoListItem{
+    padding: 4px 16px;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 500;
+    border-radius: 8px;
+    background-color: #7aa6c28a;
+}
+
+.TodoListItem:not(:last-child){
+    margin-bottom: 5px;
 }
