--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -15,16 +15,16 @@
   box-shadow: 4px 3px 7px 2px #00000040;
 }
 
-.TodoForm {
+/* .TodoForm {
   margin-bottom: 15px;
-}
+} */
 
-.TodoList {
+/* .TodoList {
   width: 100%;
   padding: 10px 30px;
-}
+} */
 
-.false {
+/* .false {
   padding: 4px 16px;
   display: flex;
   justify-content: space-between;
@@ -41,4 +41,4 @@
   composes: false;
   background-color: #22952e8a;
   text-decoration: line-through;
-}
+} */
