--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,13 +1,18 @@
 .App {
-  width: 700px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 20px 40px;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
   font-size: 20px;
   color: #004c6d;
+}
+
+.TodoBlock { 
+  width: 600px;
+  padding: 10px 30px;
+  text-align: center;
   background: #f1f5f8;
   background-image: radial-gradient(#bfc0c1 7.2%, transparent 0);
   background-size: 25px 25px;
@@ -15,30 +20,7 @@
   box-shadow: 4px 3px 7px 2px #00000040;
 }
 
-/* .TodoForm {
-  margin-bottom: 15px;
-} */
-
-/* .TodoList {
-  width: 100%;
-  padding: 10px 30px;
-} */
-
-/* .false {
-  padding: 4px 16px;
-  display: flex;
-  justify-content: space-between;
-  font-weight: 500;
-  border-radius: 8px;
-  background-color: #7aa6c28a;
+.CalendarBlock{
+  width: 250px;
+  align-self: flex-start;
 }
-
-.false:not(:last-child) {
-  margin-bottom: 5px;
-}
-
-.true {
-  composes: false;
-  background-color: #22952e8a;
-  text-decoration: line-through;
-} */
