--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   font-size: 20px;
   color: #004c6d;
 }
